--- a/blogpost.html
+++ b/blogpost.html
@@ -6,12 +6,17 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline"> Tu blog de confianza</span>
+                Hyperblog <span id="tagline"> Tu blog de confianza </span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que 
                     se pueden hacer con ramas</p>
+                <p>
+                    Los blogs son la mejor forma de compartir informació
+                    y tus ideas. Mucho mas que ir a conferencias o salir
+                    en youtube. Excpeto si eres un rockstar.
+                </p>
             </div>
         </div>
     </body>
